Closed
Bug 986347
Opened 11 years ago
Closed 11 years ago
Re-regression, menupopup is transparent, menuitem are invisible in certain case.
Categories
(Core :: Widget: Win32, defect)
Tracking
()
VERIFIED
FIXED
mozilla31
People
(Reporter: alice0775, Assigned: emk)
References
Details
(Keywords: regression)
Attachments
(3 files)
|
73.10 KB,
image/png
|
Details | |
|
977 bytes,
patch
|
jimm
:
review+
Sylvestre
:
approval-mozilla-aurora+
Sylvestre
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
|
60.68 KB,
image/png
|
Details |
When I test Bug 844255, the menupopup transparent problem re-appears.
I am not sure this is related or not, but I saw following post.
http://forums.mozillazine.org/posting.php?mode=quote&f=38&p=13358897
Steps To Reproduce:
1. Start Firefox witnout HWA on Windows7 Aero
2. Open attachment 717269 [details] (remote XUL should be enabled)
3. Hover toolbar
4. Click Menu1
5. Move mouse pointer to content area and wait to auto close menu
6. Click content area to dismiss gurbage
7. Hover toolbar
8. Cick Menu1
Actual Results:
menupopup is transparent
Expected results:
menupopup should be visible
Regression window(m-c)
Good:
http://hg.mozilla.org/mozilla-central/rev/dbf94e314cde
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:28.0) Gecko/20100101 Firefox/28.0 ID:20131121191711
Bad:
http://hg.mozilla.org/mozilla-central/rev/9a179f9b33ca
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:28.0) Gecko/20100101 Firefox/28.0 ID:20131122054606
Pushlog:
http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=dbf94e314cde&tochange=9a179f9b33ca
Regression window(m-i)
Good:
http://hg.mozilla.org/integration/mozilla-inbound/rev/5f093277a586
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:28.0) Gecko/20100101 Firefox/28.0 ID:20131121192109
Bad:
http://hg.mozilla.org/integration/mozilla-inbound/rev/01e15a1abbb1
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:28.0) Gecko/20100101 Firefox/28.0 ID:20131121193706
Pushlog:
http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=5f093277a586&tochange=01e15a1abbb1
Triggered by: Bug 925599
| Assignee | ||
Comment 1•11 years ago
|
||
Ouch.
| Assignee | ||
Updated•11 years ago
|
Attachment #8394650 -
Flags: review?(jmathies)
| Reporter | ||
Comment 2•11 years ago
|
||
Updated•11 years ago
|
| Reporter | ||
Comment 3•11 years ago
|
||
Sorry spam.
I just wanted to make sure this is on your radar before your long holiday
Flags: needinfo?(jmathies)
Comment 4•11 years ago
|
||
Comment on attachment 8394650 [details] [diff] [review]
Restore accidentaly removed HasBogusPopupsDropShadowOnMultiMonitor() call
thanks for the reminder! This looks ok to me.
Attachment #8394650 -
Flags: review?(jmathies) → review+
Flags: needinfo?(jmathies)
Comment 5•11 years ago
|
||
Isn't this going to regress bug 844255?
| Assignee | ||
Comment 6•11 years ago
|
||
This bug IS the regression. Bug 925599 regressed bug 844255 by removing the fix accidentally. This patch will just reintroduce the fix.
| Assignee | ||
Comment 7•11 years ago
|
||
Assignee: nobody → VYV03354
Status: NEW → ASSIGNED
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla31
| Reporter | ||
Comment 9•11 years ago
|
||
Confirmed, the problem was fixed on Nightly31.0a1(2014-03-26)
https://hg.mozilla.org/mozilla-central/rev/140ac04d7454
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:31.0) Gecko/20100101 Firefox/31.0 ID:20140326030203
Could you please lift up the patch to Aurora30.0a2 and Firefox29beta?
Flags: needinfo?(VYV03354)
| Assignee | ||
Comment 10•11 years ago
|
||
Comment on attachment 8394650 [details] [diff] [review]
Restore accidentaly removed HasBogusPopupsDropShadowOnMultiMonitor() call
[Approval Request Comment]
Bug caused by (feature/regressing bug #): bug 925599
User impact if declined: Some popup windows will be transparent.
Testing completed (on m-c, etc.): on m-c.
Risk to taking this patch (and alternatives if risky): very low.
String or IDL/UUID changes made by this patch: none.
Attachment #8394650 -
Flags: approval-mozilla-beta?
Attachment #8394650 -
Flags: approval-mozilla-aurora?
Flags: needinfo?(VYV03354)
Updated•11 years ago
|
Attachment #8394650 -
Flags: approval-mozilla-beta?
Attachment #8394650 -
Flags: approval-mozilla-beta+
Attachment #8394650 -
Flags: approval-mozilla-aurora?
Attachment #8394650 -
Flags: approval-mozilla-aurora+
| Assignee | ||
Comment 11•11 years ago
|
||
Comment 14•11 years ago
|
||
I get the error shown in the attached screenshot, when I try to reproduce this issue, with the Nightly from 2013-11-22, but also with Firefox 29 beta 3, on Win 7 x64.
Any thoughts/suggestions?
Flags: needinfo?(alice0775)
| Reporter | ||
Comment 15•11 years ago
|
||
(In reply to Manuela Muntean [:Manuela] [QA] from comment #14)
> Created attachment 8398457 [details]
> error.png
>
> I get the error shown in the attached screenshot, when I try to reproduce
> this issue, with the Nightly from 2013-11-22, but also with Firefox 29 beta
> 3, on Win 7 x64.
>
> Any thoughts/suggestions?
Enable Remote XUL.
(for instance, install https://addons.mozilla.org/en-US/firefox/addon/remote-xul-manager/
and add bugzilla.mozilla.org)
Flags: needinfo?(alice0775)
Comment 16•11 years ago
|
||
> Enable Remote XUL.
> (for instance, install
> https://addons.mozilla.org/en-US/firefox/addon/remote-xul-manager/
> and add bugzilla.mozilla.org)
Thanks, Alice!
Verified as fixed with Firefox 29 beta 3 on win 7 x64.
Comment 17•11 years ago
|
||
Also verified as fixed with latest Nightly & Aurora on Win 7 x64.
Status: RESOLVED → VERIFIED
Keywords: verifyme
You need to log in
before you can comment on or make changes to this bug.
Description
•